# forge

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: main.py  requirements.txt
backend/app/api/: __init__.py
backend/app/api/routes/: fork.py  generation.py  health.py  prompts.py  schemas.py
backend/app/core/engine/: forker.py  generator.py  validator.py
backend/app/core/schema/: base.py  cognition.py
backend/app/core/utils/: config.py  logger.py
configs/env/: .env.example  dev.env
data/prompts/: generate_sequence.txt
data/schemas/: cognition_sequence.json
data/sequences/: example_sequence.json
frontend/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
frontend/.svelte-kit/: ambient.d.ts  tsconfig.json
frontend/.svelte-kit/types/: route_meta_data.json
frontend/src/: app.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/app/pages/: EditorPage.svelte  Home.svelte
frontend/src/app/stores/: cognitionStore.js
frontend/src/app/styles/: global.css
frontend/src/app/utils/: api.js  api.ts
frontend/src/lib/: ThemeProvider.svelte
frontend/src/lib/components/: Accordion.svelte  Alert.svelte  Avatar.svelte  Badge.svelte  Breadcrumb.svelte  Button.svelte  Card.svelte  ColorPicker.svelte  Dropdown.svelte  FileUpload.svelte  Input.svelte  Modal.svelte  Pagination.svelte  Progress.svelte  Select.svelte  Skeleton.svelte  Slider.svelte  Switch.svelte  Tabs.svelte  Textarea.svelte  (+3 more)
frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
(+22 files in other folders)
